kubernetes/homelab-k8s-001/apps/rook-ceph/rook-ceph/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: rook.png
    gethomepage.dev/name: Rook Dashboard
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/app: rook-ceph-dashboard
    gethomepage.dev/description: Rook Dashboard
spec:
  hostnames: ["rook.dmfrey.com"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          port: 7000
